argo/remote/webtop/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webtop
  namespace: remote
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
  - name: https
    port: 3001
    protocol: TCP
  selector:
    app: webtop
  type: ClusterIP
