argo/remote/webtop/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webtop
  namespace: remote
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
  - name: https
    port: 3001
    protocol: TCP
  selector:
    app: webtop
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: webtop
  namespace: remote
spec:
  ingressClassName: traefik-internal
  rules:
  - host: webtop.spenceops.com
    http:
      paths:
      - backend:
          service:
            name: webtop
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - webtop.spenceops.com
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtop
  namespace: remote
  labels:
    app: webtop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webtop
  template:
    metadata:
      labels:
        app: webtop
    spec:
      containers:
      - name: webtop
        image: lscr.io/linuxserver/webtop:ubuntu-kde
        ports:
        - containerPort: 3000
