argo/remote/webtop/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: webtop
  namespace: remote
spec:
  ingressClassName: traefik-internal
  rules:
  - host: webtop.spenceops.com
    http:
      paths:
      - backend:
          service:
            name: webtop
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - webtop.spenceops.com
